--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,20 @@
 {
-    "git.ignoreLimitWarning": true
+    "jupyter.notebookFileRoot": "${workspaceFolder}",
+    "git.ignoreLimitWarning": true,
+    "editor.formatOnSave": true,
+    "editor.defaultFormatter": "charliermarsh.ruff",
+    "[python]": {
+        "editor.codeActionsOnSave": {
+            "source.organizeImports": "explicit"
+        },
+        "editor.rulers": [
+            88,
+        ]
+    },
+    "python.testing.pytestArgs": [
+        "tests"
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true,
+    "cmake.ignoreCMakeListsMissing": true,
 }
